--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "@types/react-window": "^1.8.8",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "tone": "^14.8.39"
+    "react-window": "^1.8.7",
+    "tone": "^14.8.39",
+    "webmidi": "^3.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
