--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -6,4 +6,4 @@ services:
       - "8000:8000"
     environment:
       - RAY_ADDRESS=auto
-    command: ["uvicorn", "webapi.main:app", "--host", "0.0.0.0", "--port", "8000"]
+    command: ["uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
