--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,18 @@ jobs:
         run: bandit -r src || true
       - name: Test
         run: pytest -vv
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+      - name: Install frontend deps
+        run: |
+          cd frontend
+          npm ci
+      - name: Build Storybook
+        run: |
+          cd frontend
+          npm run build-storybook
       - name: Build Docker
         run: docker build -t music-api:latest .
 
