--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -32,6 +34,9 @@
     "jest-environment-jsdom": "^30.0.0",
     "ts-jest": "^29.4.0",
     "typescript": "^5.4.0",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "@storybook/react-vite": "^7.6.15",
+    "@storybook/addon-essentials": "^7.6.15",
+    "storybook": "^7.6.15"
   }
 }
